--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ngx-perfect-scrollbar": "^6.3.1",
     "ngx-toastr": "^8.8.0",
     "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "xmldom": "^0.1.27",
     "zone.js": "~0.8.26"
